src/objects/Class__c.object
<CustomObject>
    <fields>
        <fullName>Board__c</fullName>
        <label>Board</label>
        <picklist>
            <picklistValues>
                <fullName>RAJ</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>CBSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIHAR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Class</relationshipLabel>
        <relationshipName>Class</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DetailedDescription__c</fullName>
        <label>DetailedDescription</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MaxSize__c</fullName>
        <label>MaxSize</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MyCount__c</fullName>
        <label>MyCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfStudents__c</fullName>
        <label>NumberOfStudents</label>
        <summaryForeignKey>Student__c.Class__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>fee__c</fullName>
        <label>fee</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Class</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ManagementQueue_Class</fullName>
        <filterScope>Queue</filterScope>
        <label>ManagementQueue</label>
        <queue>ManagementQueue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Class</pluralLabel>
    <recordTypes>
        <fullName>Test</fullName>
        <active>true</active>
        <label>Test</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>